# openinfer-dsl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish-openinfer-dsl.yml
src/: lib.rs  parse_tests.rs  types.rs
src/attributes/: init.rs  mod.rs  pattern.rs  ref_attr.rs
src/codegen/: cache.rs  dims.rs  memory.rs  mod.rs  node.rs
src/parsers/: cache.rs  dims.rs  mod.rs  node.rs  op.rs  range.rs  sections.rs  var.rs
src/validation/ops/: accumulate.rs  fill.rs  mod.rs  relu.rs
tests/: parse_tests.rs
