[package]
name = "openinfer-dsl"
version = "0.1.3"
edition = "2021"
description = "Rust-embedded DSL for defining OpenInfer graphs with explicit control flow and memory semantics."
license = "Apache-2.0"
repository = "https://github.com/arsalan-anwari/openinfer-dsl"
readme = "README.md"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
